# ImageWidget

./: .gitignore  CMakeLists.txt  ImageWidgetConfig.cmake
include/: ImageWidget.hxx  ROIDialog.hxx
rcc/: ImageWidget.qrc
src/: ImageWidget.cxx  ROIDialog.cxx  main.cxx  qmldir
